# ragstuff

./: .gitignore  LICENSE  README.md  backend.py  constants.py  main.py  pyproject.toml  rag.py  scrape.py  swarm.py  util.py  websearch.py
example/: main.py  super-metroid-speed-faq.md
src/ragstuff/: agent.py  default_models.py  rag.py  scrape.py  simple_agent.py  websearch.py
